--- a/myrobogals/rgteaching/templates/includes/new_event.html
+++ b/myrobogals/rgteaching/templates/includes/new_event.html
@@ -4,7 +4,7 @@
   <div class="form-group">
     <div class="row">
       <div class="col-9"></div>
-      <div class="col-3">{{ event_form.privacy|add_class:"form-control" }}</div>
+      <div class="col-3">{{ event_form.privacy|add_class:"custom-select"|attr:"style:font-weight:bold;float:right;" }}</div>
     </div>
   </div>
 
