--- a/myrobogals/rgteaching/templates/includes/edit_event.html
+++ b/myrobogals/rgteaching/templates/includes/edit_event.html
@@ -2,10 +2,14 @@
 
 <form action="{% url 'teaching:viewvisit' id %}" method="post"> {% csrf_token %}
   <div class="form-group row">
+    <div class="col-10"></div>
+    <div class="col-2"">{{ event_form.privacy|add_class:"custom-select"|attr:"style:font-weight:bold;float:right;" }}</div>
+  </div>
+
+  <div class="form-group row">
     <label for="recipient-name" class="form-control-label col-2">Event</label>
     <div class="col-10">
-      <!-- Smartypants...-->
-      {{ event_form.event|add_class:"form-control"|attr:"disabled"}}
+      {{ event_form.event|add_class:"form-control" }}
     </div>
   </div>
 
@@ -20,7 +24,6 @@
           {% for error in event_form.location.errors %}
             {{ error }}
           {% endfor %}
-        </div>
         </div>
       {% endif %}
     </div>
