--- a/myrobogals/rgteaching/templates/visit_view-v2.html
+++ b/myrobogals/rgteaching/templates/visit_view-v2.html
@@ -19,20 +19,20 @@
           {% trans "You have not RSVP'd to this event. Your RSVP:" %} <a href="/teaching/{{ v.pk }}/rsvp/{{ user.pk }}/yes/">{% trans "attending" %}</a> | <a
             href="/teaching/{{ v.pk }}/rsvp/{{ user.pk }}/no/">{% trans "not attending" %}</a>
         {% else %}
-          <p>{% trans "This is a closed event. You must be invited to RSVP." %}</p>
+          {% trans "This is a closed event. You must be invited to RSVP." %}
         {% endifequal %}
       {% else %}
         {% ifequal user_rsvp_status 1 %}
-          <p>{% trans "You have been invited to this event but have not yet RSVP'd. Your RSVP:" %} <a
-              href="/teaching/{{ v.pk }}/rsvp/{{ user.pk }}/yes/">{% trans "attending" %}</a> | <a href="/teaching/{{ v.pk }}/rsvp/{{ user.pk }}/no/">{% trans "not attending" %}</a></p>
+          {% trans "You have been invited to this event but have not yet RSVP'd. Your RSVP:" %} <a
+              href="/teaching/{{ v.pk }}/rsvp/{{ user.pk }}/yes/">{% trans "attending" %}</a> | <a href="/teaching/{{ v.pk }}/rsvp/{{ user.pk }}/no/">{% trans "not attending" %}</a>
         {% else %}
           {% ifequal user_rsvp_status 2 %}
-            <p>{% trans "Your RSVP status is" %} <strong>{% trans "attending" %}</strong>. <a
-                href="/teaching/{{ v.pk }}/rsvp/{{ user.pk }}/no/">{% trans "Change to not attending" %}</a></p>
+            {% trans "Your RSVP status is" %} <strong>{% trans "attending" %}</strong>. <a
+                href="/teaching/{{ v.pk }}/rsvp/{{ user.pk }}/no/">{% trans "Change to not attending" %}</a>
           {% else %}
             {% ifequal user_rsvp_status 4 %}
-              <p>{% trans "Your RSVP status is" %} <strong> {% trans "not attending" %}</strong>. <a
-                  href="/teaching/{{ v.pk }}/rsvp/{{ user.pk }}/yes/">{% trans "Change to attending" %}</a></p>
+              {% trans "Your RSVP status is" %} <strong> {% trans "not attending" %}</strong>. <a
+                  href="/teaching/{{ v.pk }}/rsvp/{{ user.pk }}/yes/">{% trans "Change to attending" %}</a>
             {% endifequal %}
           {% endifequal %}
         {% endifequal %}
@@ -67,7 +67,8 @@
           {{ v.visit_end|timezone:v.chapter.tz_obj|date:_("TIME_FORMAT") }}
         </p>
         <p>
-          <span><i class="fa fa-map-marker fa-lg" style="margin-right: 25px" aria-hidden="true"></i>{{ v.location }}</span>
+          <span><i class="fa fa-map-marker fa-lg" style="margin-right: 25px" aria-hidden="true"></i>{{ v.location }} - <small><a href="https://maps.google.com/?q={{ v.location }}">Show in
+            maps</a></small></span>
         </p>
       </div>
     </div>
@@ -165,7 +166,7 @@
     <h2 class="rg-page-header">
       Comments
       <button type="button" style="float:right; margin-top:-3px;" class="btn btn-secondary btn-sm" data-toggle="modal" data-target="#addCommentModal">
-        <i class="fa fa-comment" aria-hidden="true"></i>{% trans "Add Comment" %}
+        <i class="fa fa-comment" aria-hidden="true"></i> {% trans "Add Comment" %}
       </button>
     </h2>
 
@@ -250,30 +251,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <form method="post" action="#">
-            <div class="row">
-              <div class="col-2" style="display: flex; align-items: center; justify-content: center">
-                <img style="border-radius: 360px; height: 3rem;" src="{% static "myrobogals/img/profile_picture.png" %}"/>
-              </div>
-              <div class="col-10">
-                <strong style="color: #5876D0; padding-left: 15px">{{ request.user.first_name }} {{ request.user.last_name }}</strong>
-                <br/>
-                <div class="form-group">
-                  <div class="col-10">
-                    <textarea class="form-control" id="id_comment" cols="30" name="comment" rows="2"></textarea>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="row">
-            <div class="col-2"></div>
-            <div class="col-10">
-              <button type="submit" class="btn btn-primary" style="margin-left: 15px">Save</button>
-            </div>
-            </div>
-
-
-          </form>
+          {% include "includes/comment.html" %}
         </div>
       </div>
     </div>
