--- a/static/myrobogals/css/base_new.css
+++ b/static/myrobogals/css/base_new.css
@@ -117,12 +117,12 @@ h2 {
 .dashboard-data {
     text-align: center;
     font-size: 30px;
-    border-left: 2px solid #000;
+    border-left: 1px solid #AAAAAA;
 }
 
 .dashboard-footer {
     text-align: center;
-    border-left: 2px solid #000;
+    border-left: 1px solid #AAAAAA;
 }
 
 .dashboard-footer:first-child, .dashboard-data:first-child {
