--- a/templates/base-v2.html
+++ b/templates/base-v2.html
@@ -9,9 +9,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>myRobogals - {% block title %}{% endblock %}</title>
+  <link rel="shortcut icon" href="{{ MEDIA_URL }}images/faviconrect.png"/>
 
   <!-- 3rd party css-->
-{#  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">#}
+  {#  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">#}
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.7.1/css/bootstrap-datepicker.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-timepicker/0.5.2/css/bootstrap-timepicker.min.css"/>
@@ -23,7 +24,11 @@
 
   <!-- Custom styles for this template -->
   <link href="{% static "bootstrap/css/sticky-footer-navbar.css" %} " rel="stylesheet">
-  {#  <link href="{% static "bootstrap-datepicker/css/bootstrap-datepicker3.standalone.min.css" %}"#}
+
+  <!-- TODO: Scripts needs cleaning up -->
+  <script type="text/javascript" src="{{ MEDIA_URL }}js/django-admin.multiselect.js"></script>
+  <script type="text/javascript" src="{{ MEDIA_URL }}js/core.js"></script>
+  <script type="text/javascript" src="{{ MEDIA_URL }}js/SelectBox.js"></script>
 
   {% block header %} {% endblock %}
 </head>
@@ -54,13 +59,14 @@
           <a class="nav-link thick-font" href="#">FORUMS</a>
         </li>
         <li class="nav-item {% active_nav request 'wiki' %}">
-          <a class="nav-link thick-font" href="#">WIKI</a>
+          <a class="nav-link thick-font" href="{% url 'wiki:home' %}">WIKI</a>
         </li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user fa-lg" aria-hidden="true"></i><span
+          <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-user fa-lg"
+                                                                                                                                                             aria-hidden="true"></i><span
               class="caret"></span></a></a>
           <div class="dropdown-menu" aria-labelledby="dropdown01">
             <a class="dropdown-item" href="{% url "profile" %}">View Profile</a>
