--- a/myrobogals/rgchapter/static/rgchapter/css/stylish-portfolio.css
+++ b/myrobogals/rgchapter/static/rgchapter/css/stylish-portfolio.css
@@ -18,11 +18,11 @@ body {
 }
 
 .blue {
-    background-color: #00425d;
+    background-color: #18499f;
 }
 
 .text-primary {
-    color: #00425d;
+    color: #18499f;
 }
 
 .text-vertical-center {
