--- a/myrobogals/rgteaching/templates/includes/attendees.html
+++ b/myrobogals/rgteaching/templates/includes/attendees.html
@@ -23,7 +23,7 @@
       <div class="col-9">
         Mark Jacobs
         <br/>
-        <i class="fa fa-check-circle text-success" aria-hidden="true"></i> Trained <i class="fa fa-times-circle text-danger" aria-hidden="true"></i> Checked
+        <i class="fa fa-check-circle text-success" aria-hidden="true"></i> Trained <i class="fa fa-check-circle text-success" aria-hidden="true"></i> Checked
       </div>
     </div>
     <hr/>
@@ -33,9 +33,9 @@
         <img style="border-radius: 360px; height: 3rem;" src="{% static "myrobogals/img/profile_picture.png" %}"/>
       </div>
       <div class="col-9">
-        Mark Jacobs
+        Jessie Pinkman
         <br/>
-        <i class="fa fa-check-circle text-success" aria-hidden="true"></i> Trained <i class="fa fa-times-circle text-danger" aria-hidden="true"></i> Checked
+        <i class="fa fa-check-circle text-success" aria-hidden="true"></i> Trained <i class="fa fa-check-circle text-success" aria-hidden="true"></i> Checked
       </div>
     </div>
 
@@ -45,7 +45,7 @@
         <img style="border-radius: 360px; height: 3rem;" src="{% static "myrobogals/img/profile_picture.png" %}"/>
       </div>
       <div class="col-9">
-        Mark Jacobs
+        Cholie Field
         <br/>
         <i class="fa fa-check-circle text-success" aria-hidden="true"></i> Trained <i class="fa fa-times-circle text-danger" aria-hidden="true"></i> Checked
       </div>
