--- a/myrobogals/rgteaching/templates/includes/attendees.html
+++ b/myrobogals/rgteaching/templates/includes/attendees.html
@@ -3,7 +3,13 @@
 
 <ul class="nav nav-tabs" id="pills-tab" role="tablist">
   <li class="nav-item">
-    <a class="nav-link active" id="pills-attending-tab" data-toggle="pill" href="#pills-attending" role="tab" aria-controls="pills-attending" aria-expanded="true">ATTENDING</a>
+    <a class="nav-link active" id="pills-attending-tab" data-toggle="pill" href="#pills-attending" role="tab" aria-controls="pills-attending" aria-expanded="true">
+      {% if v.status %}
+        ATTENDED
+      {% else %}
+        ATTENDING
+      {% endif %}
+    </a>
   </li>
   <li class="nav-item">
     <a class="nav-link" id="pills-interested-tab" data-toggle="pill" href="#pills-interested" role="tab" aria-controls="pills-interested" aria-expanded="true">INTERESTED</a>
@@ -11,128 +17,150 @@
   <li class="nav-item">
     <a class="nav-link" id="pills-notgoing-tab" data-toggle="pill" href="#pills-notgoing" role="tab" aria-controls="pills-notgoing" aria-expanded="true">NOT GOING</a>
   </li>
-
 </ul>
+
 <div class="tab-content" id="pills-tabContent">
   <div class="tab-pane fade show active" id="pills-attending" role="tabpanel" aria-labelledby="pills-attending-tab">
+    {% if v.status %}
+      {% ifnotequal attended.count 0 %}
+        {% for user in attended %}
+          <div class="row" style="margin-top: 14px;">
+            <div class="col-2" style="display: flex; align-items: center; justify-content: center">
+              <img style="border-radius: 360px; height: 3rem;" src="{% static "myrobogals/img/profile_picture.png" %}"/>
+            </div>
+            <div class="col-9">
+              <a href="/profile/{{ user.user.username }}/">{{ user.user.get_full_name }}</a>
+              <br/>
+              {% if user.user.trained %}
+                <i class="fa fa-check-circle text-success" aria-hidden="true"></i>
+              {% else %}
+                <i class="fa fa-times-circle text-danger" aria-hidden="true"></i>
+              {% endif %}
+              Trained &nbsp;
 
-    <div class="row" style="margin-top: 14px;">
-      <div class="col-2" style="display: flex; align-items: center; justify-content: center">
-        <img style="border-radius: 360px; height: 3rem;" src="{% static "myrobogals/img/profile_picture.png" %}"/>
-      </div>
-      <div class="col-9">
-        Mark Jacobs
-        <br/>
-        <i class="fa fa-check-circle text-success" aria-hidden="true"></i> Trained <i class="fa fa-check-circle text-success" aria-hidden="true"></i> Checked
-      </div>
-    </div>
-    <hr/>
+              {% if user.user.security_check %}
+                <i class="fa fa-check-circle text-success" aria-hidden="true"></i>
+              {% else %}
+                <i class="fa fa-times-circle text-danger" aria-hidden="true"></i>
+              {% endif %}
+              Checked
+            </div>
+          </div>
+          <hr/>
+        {% endfor %}
+      {% else %}
+        <div class="row" style="height: 150px;">
+          <div class="col-12" style="color: #90949c; text-align: center; line-height: 150px; font-size: 16px;">
+            <b>No responses</b>
+          </div>
+        </div>
+      {% endifnotequal %}
+    {% else %}
+      {% ifnotequal attending.count 0 %}
+        {% for user in attending %}
+          <div class="row" style="margin-top: 14px;">
+            <div class="col-2" style="display: flex; align-items: center; justify-content: center">
+              <img style="border-radius: 360px; height: 3rem;" src="{% static "myrobogals/img/profile_picture.png" %}"/>
+            </div>
+            <div class="col-9">
+              <a href="/profile/{{ user.user.username }}/">{{ user.user.get_full_name }}</a>
+              <br/>
+              {% if user.user.trained %}
+                <i class="fa fa-check-circle text-success" aria-hidden="true"></i>
+              {% else %}
+                <i class="fa fa-times-circle text-danger" aria-hidden="true"></i>
+              {% endif %}
+              Trained &nbsp;
 
-    <div class="row">
-      <div class="col-2" style="display: flex; align-items: center; justify-content: center">
-        <img style="border-radius: 360px; height: 3rem;" src="{% static "myrobogals/img/profile_picture.png" %}"/>
-      </div>
-      <div class="col-9">
-        Jessie Pinkman
-        <br/>
-        <i class="fa fa-check-circle text-success" aria-hidden="true"></i> Trained <i class="fa fa-check-circle text-success" aria-hidden="true"></i> Checked
-      </div>
-    </div>
-
-    <hr/>
-    <div class="row">
-      <div class="col-2" style="display: flex; align-items: center; justify-content: center">
-        <img style="border-radius: 360px; height: 3rem;" src="{% static "myrobogals/img/profile_picture.png" %}"/>
-      </div>
-      <div class="col-9">
-        Cholie Field
-        <br/>
-        <i class="fa fa-check-circle text-success" aria-hidden="true"></i> Trained <i class="fa fa-times-circle text-danger" aria-hidden="true"></i> Checked
-      </div>
-    </div>
+              {% if user.user.security_check %}
+                <i class="fa fa-check-circle text-success" aria-hidden="true"></i>
+              {% else %}
+                <i class="fa fa-times-circle text-danger" aria-hidden="true"></i>
+              {% endif %}
+              Checked
+            </div>
+          </div>
+          <hr/>
+        {% endfor %}
+      {% else %}
+        <div class="row" style="height: 150px;">
+          <div class="col-12" style="color: #90949c; text-align: center; line-height: 150px; font-size: 16px;">
+            <b>No responses</b>
+          </div>
+        </div>
+      {% endifnotequal %}
+    {% endif %}
   </div>
 
   <div class="tab-pane fade" id="pills-interested" role="tabpanel" aria-labelledby="pills-interested-tab">
-    <div class="row" style="margin-top: 14px;">
-      <div class="col-2" style="display: flex; align-items: center; justify-content: center">
-        <img style="border-radius: 360px; height: 3rem;" src="{% static "myrobogals/img/profile_picture.png" %}"/>
-      </div>
-      <div class="col-9">
-        Mark Jacobs
-        <br/>
-        <i class="fa fa-check-circle text-success" aria-hidden="true"></i> Trained <i class="fa fa-times-circle text-danger" aria-hidden="true"></i> Checked
-      </div>
-    </div>
-    <hr/>
+    {% ifnotequal notattending.count 0 %}
+      {% for user in notattending %}
+        <div class="row" style="margin-top: 14px;">
+          <div class="col-2" style="display: flex; align-items: center; justify-content: center">
+            <img style="border-radius: 360px; height: 3rem;" src="{% static "myrobogals/img/profile_picture.png" %}"/>
+          </div>
+          <div class="col-9">
+            <a href="/profile/{{ user.user.username }}/">{{ user.user.get_full_name }}</a>
+            <br/>
+            {% if user.user.trained %}
+              <i class="fa fa-check-circle text-success" aria-hidden="true"></i>
+            {% else %}
+              <i class="fa fa-times-circle text-danger" aria-hidden="true"></i>
+            {% endif %}
+            Trained &nbsp;
 
-    <div class="row">
-      <div class="col-2" style="display: flex; align-items: center; justify-content: center">
-        <img style="border-radius: 360px; height: 3rem;" src="{% static "myrobogals/img/profile_picture.png" %}"/>
+            {% if user.user.security_check %}
+              <i class="fa fa-check-circle text-success" aria-hidden="true"></i>
+            {% else %}
+              <i class="fa fa-times-circle text-danger" aria-hidden="true"></i>
+            {% endif %}
+            Checked
+          </div>
+        </div>
+        <hr/>
+      {% endfor %}
+    {% else %}
+      <div class="row" style="height: 150px;">
+        <div class="col-12" style="color: #90949c; text-align: center; line-height: 150px; font-size: 16px;">
+          <b>No responses</b>
+        </div>
       </div>
-      <div class="col-9">
-        Mark Jacobs
-        <br/>
-        <i class="fa fa-check-circle text-success" aria-hidden="true"></i> Trained <i class="fa fa-times-circle text-danger" aria-hidden="true"></i> Checked
-      </div>
-    </div>
-
-    <hr/>
-    <div class="row">
-      <div class="col-2" style="display: flex; align-items: center; justify-content: center">
-        <img style="border-radius: 360px; height: 3rem;" src="{% static "myrobogals/img/profile_picture.png" %}"/>
-      </div>
-      <div class="col-9">
-        Mark Jacobs
-        <br/>
-        <i class="fa fa-check-circle text-success" aria-hidden="true"></i> Trained <i class="fa fa-times-circle text-danger" aria-hidden="true"></i> Checked
-      </div>
-    </div>
-    <hr/>
-    <div class="row">
-      <div class="col-2" style="display: flex; align-items: center; justify-content: center">
-        <img style="border-radius: 360px; height: 3rem;" src="{% static "myrobogals/img/profile_picture.png" %}"/>
-      </div>
-      <div class="col-9">
-        Mark Jacobs
-        <br/>
-        <i class="fa fa-check-circle text-success" aria-hidden="true"></i> Trained <i class="fa fa-times-circle text-danger" aria-hidden="true"></i> Checked
-      </div>
-    </div>
-    <hr/>
-
-    <div class="row">
-      <div class="col-2" style="display: flex; align-items: center; justify-content: center">
-        <img style="border-radius: 360px; height: 3rem;" src="{% static "myrobogals/img/profile_picture.png" %}"/>
-      </div>
-      <div class="col-9">
-        Mark Jacobs
-        <br/>
-        <i class="fa fa-check-circle text-success" aria-hidden="true"></i> Trained <i class="fa fa-times-circle text-danger" aria-hidden="true"></i> Checked
-      </div>
-    </div>
-
-    <hr/>
-    <div class="row">
-      <div class="col-2" style="display: flex; align-items: center; justify-content: center">
-        <img style="border-radius: 360px; height: 3rem;" src="{% static "myrobogals/img/profile_picture.png" %}"/>
-      </div>
-      <div class="col-9">
-        Mark Jacobs
-        <br/>
-        <i class="fa fa-check-circle text-success" aria-hidden="true"></i> Trained <i class="fa fa-times-circle text-danger" aria-hidden="true"></i> Checked
-      </div>
-    </div>
+    {% endifnotequal %}
   </div>
+
   <div class="tab-pane fade" id="pills-notgoing" role="tabpanel" aria-labelledby="pills-notgoing-tab">
-    <div class="row" style="margin-top: 14px;">
-      <div class="col-2" style="display: flex; align-items: center; justify-content: center">
-        <img style="border-radius: 360px; height: 3rem;" src="{% static "myrobogals/img/profile_picture.png" %}"/>
+    {% ifnotequal waitingreply.count 0 %}
+      {% for user in waitingreply %}
+        <div class="row" style="margin-top: 14px;">
+          <div class="col-2" style="display: flex; align-items: center; justify-content: center">
+            <img style="border-radius: 360px; height: 3rem;" src="{% static "myrobogals/img/profile_picture.png" %}"/>
+          </div>
+          <div class="col-9">
+            <a href="/profile/{{ user.user.username }}/">{{ user.user.get_full_name }}</a>
+            <br/>
+            {% if user.user.trained %}
+              <i class="fa fa-check-circle text-success" aria-hidden="true"></i>
+            {% else %}
+              <i class="fa fa-times-circle text-danger" aria-hidden="true"></i>
+            {% endif %}
+            Trained &nbsp;
+
+            {% if user.user.security_check %}
+              <i class="fa fa-check-circle text-success" aria-hidden="true"></i>
+            {% else %}
+              <i class="fa fa-times-circle text-danger" aria-hidden="true"></i>
+            {% endif %}
+            Checked
+          </div>
+        </div>
+        <hr/>
+      {% endfor %}
+    {% else %}
+      <div class="row" style="height: 150px;">
+        <div class="col-12" style="color: #90949c; text-align: center; line-height: 150px; font-size: 16px;">
+          <b>No responses</b>
+        </div>
       </div>
-      <div class="col-9">
-        Mark Jacobs
-        <br/>
-        <i class="fa fa-check-circle text-success" aria-hidden="true"></i> Trained <i class="fa fa-times-circle text-danger" aria-hidden="true"></i> Checked
-      </div>
-    </div>
+    {% endifnotequal %}
   </div>
 </div>
