--- a/myrobogals/rgteaching/templates/includes/comment.html
+++ b/myrobogals/rgteaching/templates/includes/comment.html
@@ -10,7 +10,7 @@
       <br/>
       <div class="form-group">
         <div class="col-10">
-          <textarea class="form-control" id="id_comment" cols="30" name="comment" rows="2"></textarea>
+          {{ rsvp_form }}
         </div>
       </div>
     </div>
