--- a/myrobogals/rgteaching/templates/teaching_home-v2.html
+++ b/myrobogals/rgteaching/templates/teaching_home-v2.html
@@ -37,14 +37,14 @@
       </button>
     </h2>
 
-    <table class="table table-striped">
+    <table class="table table-striped table-sm">
       <thead class="rg-thead-inverse">
       <tr>
         <th>EVENT</th>
         <th>DATE</th>
         <th>TIME</th>
-        <th style="text-align: center;">ATTENDING</th>
-        <th style="text-align: center;">PRIVACY</th>
+        <th class="d-none d-sm-table-cell" style="text-align: center;">ATTENDING</th>
+        <th class="d-none d-sm-table-cell" style="text-align: center;">PRIVACY</th>
       </tr>
       </thead>
 
@@ -54,8 +54,8 @@
           <th scope="row"><a href="{% url 'teaching:viewvisit' e.id %}">{{ e.school }}</a></th>
           <td>{{ e.visit_start|date:_("DATE_FORMAT") }}</td>
           <td>{{ e.visit_start|date:_("TIME_FORMAT") }} to {{ e.visit_end|date:_("TIME_FORMAT") }}</td>
-          <td style="text-align: center;">{{ e.attending }}</td>
-          <td style="text-align: center;">{% if e.privacy == 0 %}Private{% else %}Public{% endif %}</td>
+          <td class="d-none d-sm-table-cell" style="text-align: center;">{{ e.attending }}</td>
+          <td class="d-none d-sm-table-cell" style="text-align: center;">{% if e.privacy == 0 %}Private{% else %}Public{% endif %}</td>
         </tr>
       {% endfor %}
       </tbody>
@@ -71,7 +71,7 @@
       <a href="{% url "teaching:quickentry" %}" style="float:right; margin-top:-3px; margin-left: 5px;" class="btn btn-secondary btn-sm" role="button" aria-pressed="true">{% trans "QUICK ENTRY" %}</a>
     </h2>
 
-    <table class="table table-striped">
+    <table class="table table-striped table-sm">
       <thead class="rg-thead-inverse">
       <tr>
         <th>EVENT</th>
@@ -97,7 +97,7 @@
           <td>{{ e.visit_start|date:_("DATE_FORMAT") }} - {{ e.visit_end|date:_("TIME_FORMAT") }}</td>
           <td style="text-align: center;">{{ e.attended }}</td>
           <td style="text-align: center;">{{ e.numstudents }}</td>
-          <td style="text-align: center;">Close</td>
+          <td style="text-align: center;">Closed</td>
         </tr>
       {% endfor %}
       </tbody>
